# mcp-poc

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: handler.py  tools.py
docker/proxy/: Dockerfile
docker/sse/: Dockerfile
libs/: oidc.py
proxy/: client.py  core.py  main.py
sse/: backend.py  main.py  middleware.py  router.py
stdio/: main.py
test/: local.py  remote.py
