[project]
name = "mcp-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mcp[cli]>=1.6.0",
    "openai>=1.72.0",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.0",
]
